# qa_guru_hw16_poetry

./: .gitignore
new_poetry_project/: pyproject.toml
